src/tests/fixtures/enums/ImplicitlyNumericEnum.ts
/** @GQLEnum */
enum Enum {
  VALID,
  INVALID,
}
